set timezon to dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      timezone: "Asia/Tokyo"
     open-pull-requests-limit: 1
+
